# financial-recon-engine

./: README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: defaults.yaml
config/use_cases/: positions.yaml  prices.yaml  transactions.yaml
scripts/: generate_sample_data.py
src/data_layer/: key_detector.py  loader.py  normalizer.py  schema_inferrer.py  validators.py
src/engine/: config_loader.py  matcher.py  models.py  reconciler.py  summary_builder.py  tolerance_engine.py  variance_classifier.py
src/reporting/: excel_exporter.py
src/ui/: app.py  state.py
tests/fixtures/: positions_source.csv  positions_target.csv  prices_source.csv  prices_target.csv  transactions_source.csv  transactions_target.csv
