[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "financial-recon-engine"
version = "1.0.0"
description = "Financial Data Reconciliation & Variance Engine"
requires-python = ">=3.10"
dependencies = [
    "pandas==2.2.3",
    "pyarrow==16.1.0",
    "numpy==1.26.4",
    "openpyxl==3.1.5",
    "xlsxwriter==3.2.0",
    "python-dateutil==2.9.0",
    "pydantic==2.7.4",
    "pyyaml==6.0.2",
    "streamlit==1.37.0",
    "plotly==5.23.0",
    "scikit-learn==1.5.2",
    "scipy==1.14.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]
